== 2.7.13 ==
Release date: 
* Fixed: PowerPack settings were not showing on WordPress multisite

== 2.7.12 ==
Release date: November 28, 2023
* Enhancement: Info List - Link type Box option now also links the Info List icon
* Enhancement: Buttons - Updated Buttons Spacing option to add row spacing when button stack
* Enhancement: Logo Carousel - Added option to show or hide logo title
* Enhancement: Logo Grid - Added option to show or hide logo title
* Enhancement: Logo Grid - Repeater items now show logo title instead of Logo Image text
* Fixed: Instagram Feed - Carousel was not working when Upgrade Swiper Library experiment is set to active
* Fixed: Gravity Forms - Submit Button alignment option was not working

== 2.7.11 ==
Release date: October 17, 2023
* Fixed: Advanced Posts - Excerpt length option was not working in the Elementor editor
* Fixed: Animated Gradient Background - Animation was not working with flex containers

== 2.7.10 ==
Release date: September 20, 2023
* Enhancement: Instagram Feed - Added conditional loading of scripts
* Fixed: Info Grid & Carousel - Visible Items option was not working in Elementor editor
* Fixed: Info Grid & Carousel - JS error was showing when grid layout is selected
* Fixed: Advanced Accordion - Issue with toggle icon when item is set as active by default

== 2.7.9 ==
Release date: August 1, 2023
* Fixed: Compatibility issues with Elementor 3.15.0

== 2.7.8 ==
Release date: July 11, 2023
* Enhancement: WP Forms - Updated labels text color selector
* Enhancement: Removed CSS & JS related to slick slider
* Fixed: Team Member Carousel - Images were not appearing in the editor
* Fixed: Team Member Carousel - Arrow style options were not working
* Fixed: Info Box Carousel - Images were not appearing in the editor
* Fixed: Logo Carousel - Pagination dots styling options were not working

== 2.7.7 ==
Release date: June 21, 2023
* Enhancement: WP Forms - Added page break style options